# recsys2026-niwatori

./: .gitignore  LICENSE  README.md  download_datasets.sh  download_weights.sh  pyproject.toml  run_blind_b.sh  run_cv5.sh  run_full.sh  run_inference.sh  run_paper_devset.sh  run_preprocess.sh  run_reranker_blind_b.sh  run_reranker_cv5.sh  run_responder_blind_b.sh  run_retriever_blind_b.sh  run_retriever_cv5.sh  run_retriever_fit.sh  run_train.sh  upload_weights.sh
docs/: folds.md  method.md  paper_evaluation.md  retriever_metrics.md  runtime.md
paper/: .gitignore  README.md  build.sh  generated_family_rows.tex  generated_results.tex  generated_retriever_rows.tex  main.tex  references.bib  results_mode.tex
paper/figure_sources/: pipeline.tex  responder_example.tex
preprocessing/: dense_track_encoder.py
reference/: blind_b.json  blind_b_ranked.npz
reranker/protocol_098_union_rich_lgbm/: README.md  main.py
reranker/union_lambdarank/: README.md  (+5 more)
retriever/: _basic_wrapper.py  fit_free_sources.yaml
scripts/: _run_lib.sh  analyze_paper_results.py  build_basic_retrievers.py  build_catalog_id_map.py  build_combined_tpd1_retrievers.py  build_public_splits.py  build_ranked_submission.py  build_responder.py  build_retriever_metrics.py  build_spotify_uuid_map.py  build_stage1_sources.sh  build_stage2_sources.sh  build_train_fit_retriever_artifacts.py  build_two_tower_lora_oof.py  build_union_candidates.py  run_reranker.py  run_tfidf_lgbm.py  slice_fit_free_retriever_artifact.py  verify_blind_b_ranking.py
tests/: test_artifact_recovery.py  test_paper_analysis.py
(+97 files in other folders)
