[project]
name = "recsys2026"
version = "1.0.0"
description = "RecSys Challenge 2026 (Music CRS)"
readme = "README.md"
authors = [{ name = "ryowk" }]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.13.0",
    "bm25s==0.3.8",
    "datasets==4.8.5",
    "huggingface-hub==1.13.0",
    "lightgbm==4.6.0",
    "matplotlib>=3.11.0",
    "numpy==2.3.5",
    "pyarrow==24.0.0",
    "pyyaml==6.0.3",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "sentencepiece==0.2.1",
    "torch==2.11.0",
    "tqdm==4.67.3",
    "transformers==5.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recsys2026"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
